fixed PAR link, touched up spacing on navbar margins

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,17 +3,17 @@ form.login {
   margin-top: 50px;
 }
 
+.container-fluid {
+  margin-top: 10px;
+}
+
+.navbar {
+  background-color: #708ae8;
+  color: white;
+}
+
 .section {
   padding: 20px;
-}
-
-.row {
-  display: flex;
-}
-
-.column-top {
-  flex: 33.33%;
-  padding: 5px;
 }
 
 .header {
@@ -24,9 +24,33 @@ form.login {
 .title.header {
   margin-top: 30px;
 }
-.navbar {
-  background-color: #708ae8;
-  color: white;
+
+#header-logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 400px;
+  height: auto;
+  margin-bottom: -50px;
+}
+
+.row {
+  display: flex;
+}
+
+.columns {
+  margin-top: 20px;
+}
+
+.column-top {
+  flex: 33.33%;
+  padding: 5px;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 a {
@@ -42,26 +66,16 @@ h1, h2, p {
   font-size: 40px;
 }
 
-/* li {
-  /* border: gray 1px solid; */
-  /* margin-top: 20px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-} */ 
-
-/* li:hover {
-  background-color: #708ae8;
-}  */
-
 .breadcrumb {
   background-color: white;
   display: block;
 }
 
 a.categoryBtn{
-  /* background-color: #708ae8; */
   color:#708ae8;
   width: 100%;
 }
+
 .cat-list {
   margin-left: 10px;
 }
@@ -74,31 +88,12 @@ a.categoryBtn{
   margin-left: -10px;
 }
 
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .card-content{
   margin-top: 10px;
 }
 
 .card {
   border: 1px solid rgba(0,0,0,.3);
-}
-
-#header-logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 400px;
-  height: auto;
-  margin-bottom: -50px;
-}
-
-.columns {
-  margin-top: 20px;
 }
 
 div.select.card {
@@ -131,8 +126,9 @@ form.create-form {
 
 .lower-area {
   background-color: #708ae8;
-  padding: 30px 0 100px 0;
+  padding: 80px 0 100px 0;
 }
+
 /*css below by @eduardosada*/
 
 .ufo {
@@ -384,8 +380,6 @@ form.create-form {
   left: .3em;
   background: currentColor;
 }
-
-
 
 @keyframes blink {
   0%, 2%, 60%, 62%, 100% { transform: scaleX(1) scaleY(1); } 
